--- a/group.html
+++ b/group.html
@@ -8,17 +8,55 @@
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./ressource/css/globalTag.css">
+    <link rel="stylesheet" href="./ressource/css/single.css">
+    <link rel="stylesheet" href="./ressource/css/WnH.css">
+    <link rel="stylesheet" href="./ressource/css/style.css">
+    <link rel="stylesheet" href="./ressource/css/master.css">
+    <script type= "text/javascript " src= "ressource/js/jsnow.js "></script>
     <script src="ressource/js/fonctionUser.js"></script>
 </head>
 <body>
+<style>
+    #btn-wish{display: none;}
+</style>
 
-<a href="index.html">back</a><br />
-<label for="i-user">Ajouter un utilisateur</label>
-<input id="i-user" type="text" required>
-<input id="add-user-button" type="button" value="ajouter">
-<div id="message"></div>
 
-<div>Liste des utilisateurs</div>
-<div id="users"></div>
+
+
+
+<div id="content" class="flex flex_col background-color-active">
+    <a href="index.html">retour</a><br />
+    <div class="flex_col" >
+        <form id="form-add-group">
+            <fieldset class="background-color-active">
+                <legend>Ajouter un utilisateur</legend>
+                <ul class="flex  aligne_end flex_row">
+                    <li><input id="i-user" style="width : 250px;" type="text" placeholder="Nom de l'utilisateur" required></li>
+                    <li><input id="add-user-button" type="button" value="ajouter"></li>
+                </ul>
+            </fieldset>
+        </form>
+    </div>
+    <div id="message"></div>
+    <fieldset id="groupe_infos">
+        <legend id="legend-group"></legend>
+        <div id="users"></div>
+    </fieldset>
+    <button id="btn-send-gift">Distribuer</button>
+    <button id="btn-wish">Dévoiler</button>
+    <button id="btn-wish-none">Cacher</button>
+    <div id="wish"></div>
+    <script type="text/javascript">
+        $(function(){
+            $().jSnow();
+            getGroupsList("#groupe_list");
+            $("#groupe li").click(function(){
+                $("li").removeClass("select");
+                $(this).addClass("select");
+            });
+        })
+    </script>
+</div>
 </body>
 </html>
